# Rust_Yew_FrontEnd

./: README.md
my_tutorial/: README.md
my_tutorial/clickme/: Cargo.toml  README.md
my_tutorial/clickme/src-tauri/: Cargo.toml  tauri.conf.json
tutorial/: README.md
tutorial/yew_snippet_vscode_sample/: README.md
tutorial/yew_tu01/: Cargo.toml
tutorial/yew_tu02/: Cargo.toml
tutorial/yew_tu02/src/: main.rs
tutorial/yew_tu03/: Cargo.toml
tutorial/yew_tu03/src/: main.rs
tutorial/yew_tu04/: Cargo.toml
tutorial/yew_tu04/src/: main.rs
tutorial/yew_tu04_mod/: Cargo.toml
tutorial/yew_tu04_mod/src/: main.rs  videosdetails.rs  videoslist.rs
tutorial/yew_tu04_mod02/: Cargo.toml
tutorial/yew_tu04_mod02/src/: app.rs
tutorial/yew_tu04_mod02/src/app/: videosdetails.rs  videoslist.rs
tutorial/yew_tu05/: Cargo.toml  README.md
tutorial/yew_tu05/src/: main.rs
tutorial/yew_tu05_mod/: Cargo.toml
tutorial/yew_tu05_mod/src/: app.rs  main.rs
tutorial/yew_tu05_mod/src/app/: structvideo.rs  videosdetails.rs  videoslist.rs
tutorial/yew_tu05_refactoring_lib/: Cargo.toml  README.md
tutorial/yew_tu05_refactoring_lib/src/: app.rs
tutorial/yew_tu05_refactoring_lib/src/app/: video.rs
tutorial_etc/: README.md
yew_actix_template/: README.md
