[package]
name = "yew_tu05_refactoring_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.34"
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0.159", features = ["derive"] }
